--- a/src/AdminWebMailBundle/Resources/views/header.html.twig
+++ b/src/AdminWebMailBundle/Resources/views/header.html.twig
@@ -7,11 +7,11 @@
                 <span class="icon-bar"></span>
                 <span class="icon-bar"></span>
             </button>
-            <a class="navbar-brand" href="http://sefirosweb.es/" target="_blank">Sefirosweb.es</a>
+            <a class="navbar-brand" href="{{ path('admin_web_mail_homepage') }}">Sefirosweb.es</a>
         </div>
         <div id="navbar" class="collapse navbar-collapse">
             <ul class="nav navbar-nav">
-                <li class="active"><a href="index.php">Edit Users</a></li>
+                <li class="active"><a href="{{ path('admin_web_mail_homepage') }}">Edit Users</a></li>
                 <li><a href="about.php">Edit Aliases</a></li>
                 <li><a href="contact.php">Edit Domains</a></li>
             </ul>
