--- a/src/AdminWebMailBundle/Resources/views/header.html.twig
+++ b/src/AdminWebMailBundle/Resources/views/header.html.twig
@@ -11,9 +11,9 @@
         </div>
         <div id="navbar" class="collapse navbar-collapse">
             <ul class="nav navbar-nav">
-                <li class="active"><a href="{{ path('admin_web_mail_homepage') }}">Edit Users</a></li>
-                <li><a href="about.php">Edit Aliases</a></li>
-                <li><a href="contact.php">Edit Domains</a></li>
+                <li{% if app.request.get('_route') == 'homepage_users' %} class="active" {% endif %}><a href="{{ path('homepage_users') }}">Edit Users</a></li>
+                <li{% if app.request.get('_route') == 'homepage_aliases' %} class="active" {% endif %}><a href="{{ path('homepage_aliases') }}">Edit Aliases</a></li>
+                <li{% if app.request.get('_route') == 'homepage_domains' %} class="active" {% endif %}><a href="{{ path('homepage_domains') }}">Edit Domains</a></li>
             </ul>
         </div>
     </div>
