--- a/src/AdminWebMailBundle/Resources/views/users.html.twig
+++ b/src/AdminWebMailBundle/Resources/views/users.html.twig
@@ -22,7 +22,7 @@
 {% endblock %}
 
 {% block body %}
-    <h1>Hello World!</h1>
+    <h1>Users</h1>
     <div class="row">
         <div class="col-sm-12">
             <div id="toolbar" disabled="disabled">
