--- a/src/AdminWebMailBundle/Resources/views/domains.html.twig
+++ b/src/AdminWebMailBundle/Resources/views/domains.html.twig
@@ -5,7 +5,7 @@
     <div class="row">
         <div class="col-sm-12">
             <div id="toolbar" disabled="disabled">
-                <button class="btn btn-success" data-toggle="modal" data-target="#addMailModal">Add Mail</button>
+                <button class="btn btn-success" data-toggle="modal" data-target="#addDomainModal">Add Domain</button>
             </div>
             <table id="table"
                    data-toolbar="#toolbar"
@@ -31,6 +31,46 @@
             </table>
         </div>
     </div>
+
+
+    <!--Modals-->
+
+    <!-- Modal Add Domain -->
+    <div id="addDomainModal" class="modal fade" role="dialog">
+        <div class="modal-dialog">
+            <div class="modal-content">
+                <div class="modal-header">
+                    <button type="button" class="close" data-dismiss="modal">&times;</button>
+                    <h4 class="modal-title">Insert info</h4>
+                </div>
+                <div class="modal-body">
+
+                    <div class="row">
+                        <div class="col-sm-12">
+                            <form>
+                                <div class="form-group" id="newDomainTextGroup">
+                                    <label class="control-label" for="newDomainText">Domain Name</label>
+
+                                    <div class="input-group">
+                                        <span class="input-group-addon"><i class="glyphicon glyphicon-tasks"></i></span>
+                                        <input id="newDomainText" type="email" class="form-control" placeholder="sefirosweb.es">
+                                    </div>
+                                </div>
+                            </form>
+                        </div>
+                    </div>
+
+                </div>
+                <div class="modal-footer">
+                    <button type="button" class="btn btn-success" style="float:left;" id="createDomainBtn">Create Domain</button>
+                    <button type="button" class="btn btn-default" data-dismiss="modal">Cancel</button>
+                </div>
+            </div>
+
+        </div>
+    </div>
+
+
 {% endblock %}
 
 
@@ -40,11 +80,41 @@
         var $table = $('#table');
         var $users = JSON.parse('{{(users|json_encode|raw)}}');
         var $aliases = JSON.parse('{{(aliases|json_encode|raw)}}');
+        var errorGlyphicon = '<span class="glyphicon glyphicon-remove form-control-feedback error-label"></span>';
+
+        window.operateEvents = {
+            'click .remove': function (e, value, row, index) {
+                $table.bootstrapTable('showLoading');
+                $.ajax({
+                    type: "DELETE",
+                    data: {
+                        "id": row.id
+                    },
+                    url: "{{ path('delete_domains') }}",
+                    dataType: "json",
+                    success: function (data) {
+                        if (data["success"] == "true") {
+                            notify("Domain deleted", "warning");
+                            $table.bootstrapTable('remove', {
+                                field: 'id',
+                                values: [row.id]
+                            });
+                        } else {
+                            notify(data["error"], "danger");
+                        }
+                    },
+                    error: function (data) {
+                        notify("Error on delete user", "danger");
+                        console.log(data);
+                    },
+                    complete: function () {
+                        $table.bootstrapTable('hideLoading');
+                    }
+                });
+            }
+        };
 
         $(document).ready(function () {
-            console.log($users);
-            console.log($aliases);
-
             $table.bootstrapTable({
                 columns: [{
                     field: 'id',
@@ -56,16 +126,56 @@
                     field: 'name',
                     title: 'Domain',
                     sortable: true,
+                    align: 'center',
                     editable: {
                         type: 'text',
                         title: 'Email Address',
                         validate: function (value) {
                             value = $.trim(value);
+                            if (!value) {
+                                return 'This field is required';
+                            }
 
+                            var dataDomain = $table.bootstrapTable('getData'), index = $(this).parents('tr').data('index');
+                            var oldName = dataDomain[index]["name"];
+
+                            $table.bootstrapTable('showLoading');
+                            $.ajax({
+                                type: "PUT",
+                                data: {
+                                    "id": dataDomain[index]["id"],
+                                    "name": value
+                                },
+                                url: "{{ path('update_domains') }}",
+                                dataType: "json",
+                                success: function (data) {
+                                    if (data["success"] == "true") {
+                                        notify("Update successfully", "success");
+                                    } else {
+                                        notify(data["error"], "danger");
+                                        $table.bootstrapTable('updateByUniqueId', {id: dataDomain[index]["id"], row: {name: oldName}});
+                                    }
+                                },
+                                error: function () {
+                                    notify("Error on update domain", "danger");
+                                    $table.bootstrapTable('updateByUniqueId', {id: dataDomain[index]["id"], row: {name: oldName}});
+                                },
+                                complete: function () {
+                                    $table.bootstrapTable('hideLoading');
+                                }
+                            });
                             return '';
                         }
+                    }
+                }, {
+                    field: 'operate',
+                    title: 'Item Operate',
+                    align: 'center',
+                    formatter: function (value, row, index) {
+                        return ['<a class="remove" href="#" title="Remove"><i class="glyphicon glyphicon-remove"></i></a>']
                     },
-                    align: 'center'
+                    events: operateEvents
+
                 }],
                 onExpandRow: function (index, row, $subTable) {
                     subTableBuild($subTable.html('<table></table>').find('table'), row['id']);
@@ -153,6 +263,69 @@
                     data: data
                 });
             }
+
+            $('#createDomainBtn').click(function () {
+                if (checkDomain()) {
+                    $table.bootstrapTable('showLoading');
+                    $('#addDomainModal').modal('hide');
+                    $.ajax({
+                        type: "POST",
+                        data: {
+                            "domainName": $("#newDomainText").val()
+                        },
+                        url: "{{ path('add_domains') }}",
+                        dataType: "json",
+                        success: function (data) {
+                            if (data["success"] == "true") {
+                                notify("Domain created", "success");
+                                $table.bootstrapTable('prepend', data["domain"]);
+                            } else {
+                                notify(data["error"], "danger");
+                            }
+                        },
+                        error: function (data) {
+                            notify("Error on create domain", "danger");
+                            console.log(data);
+                        },
+                        complete: function () {
+                            $table.bootstrapTable('hideLoading');
+                        }
+                    });
+                }
+            });
+
+            //Check domain empty
+            $("#newDomainText")
+                    .blur(function () {
+                        checkDomain();
+                    })
+                    .focus(function () {
+                        $(this).parent().parent().removeClass("has-error has-success");
+                        $("#newDomainText").popover('hide');
+                    });
+
+            function checkDomain() {
+                $("#newDomainTextGroup").find(".error-label").remove();
+                if ($("#newDomainText").val() != "") {
+                    $("#newDomainTextGroup").addClass("has-success");
+                    return true;
+                } else {
+                    $("#newDomainTextGroup").addClass("has-error");
+                    popoverShow('newDomainText', 'Domain cannot be empty!', 'top', 'danger');
+                    $("#newDomainText").after(errorGlyphicon);
+                    return false;
+                }
+            }
+
+
+            //Clear modal
+            $('.modal').on('hidden.bs.modal', function () {
+                $(this).find('input').val("");
+                $(this).find('.error-label').remove();
+                $(this).find('.has-error, .has-success').removeClass("has-error has-success");
+                $(this).find('.popover').popover('hide');
+            });
+
 
         });
     </script>
