--- a/src/AdminWebMailBundle/Resources/views/header.html.twig
+++ b/src/AdminWebMailBundle/Resources/views/header.html.twig
@@ -15,6 +15,9 @@
                 <li{% if app.request.get('_route') == 'homepage_aliases' %} class="active" {% endif %}><a href="{{ path('homepage_aliases') }}">Edit Aliases</a></li>
                 <li{% if app.request.get('_route') == 'homepage_domains' %} class="active" {% endif %}><a href="{{ path('homepage_domains') }}">Edit Domains</a></li>
             </ul>
+            <ul class="nav navbar-nav navbar-right">
+                <li><a href="{{ path('security_logout') }}">Logout</a></li>
+            </ul>
         </div>
     </div>
 </nav>
