--- a/src/AdminWebMailBundle/Resources/views/domains.html.twig
+++ b/src/AdminWebMailBundle/Resources/views/domains.html.twig
@@ -104,7 +104,7 @@
                         }
                     },
                     error: function (data) {
-                        notify("Error on delete user", "danger");
+                        notify("Error on delete domain", "danger");
                         console.log(data);
                     },
                     complete: function () {
